solr-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: solr-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: solr-svc
          servicePort: 8983
        path: /(.*)
