solr-virtual.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: solr
spec:
  hosts:
  - "*"
  gateways:
  - public-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: solr-svc
        port:
          number: 8983
    rewrite:
        uri: "/"
